import { ClientOptions, Transport } from "@nestjs/microservices";
import { ConfigService } from "@nestjs/config";

const configService: ConfigService = new ConfigService();

export const grpcClientOptions: ClientOptions = {
  transport: Transport.GRPC,
  options: {
    package: [
      "user",
      "achievement",
      "achievementreward",
      "achievementrewardlocale",
      "achievementbehaviour",
      "gameobjectquestitem",
      "explorationbasexp",
      "gameevent",
      "gameobjecttemplateaddon",
      "gameobjecttemplate",
      "gameobjectaddon",
      "gameobject",
      "gameobjectqueststarter",
      "loottemplate",
      "gameobjectquestender",
      "gameobjecttemplatelocale",
      "gameeventmodelequip",
      "gameeventgameobject",
      "gameeventquest",
      "gameeventcharacter",
      "gameobjectoverrides",
      "gameeventcondition",
      "gameeventcreature",
      "gameobjectloottemplate",
      "millingloottemplate",
      "mailloottemplate",
      "graveyardzone",
      "itemrandombonuslisttemplate",
      "jumpchargeparams",
      "itemtemplateaddon",
      "linkedrespawn",
      "itembehaviour",
      "instancetemplate",
      "itemtemplate",
      "mountdefinitions",
      "instancespawngroups",
      "characterspell",
      "characterdialogue",
      "character",
      "paragraphlocale",
      "petnamegeneration",
      "paragraph",
      "petlevelstats",
      "playerfactionachievement",
      "craftlevelstat",
      "playerfactionquest",
      "playerreward",
      "playerfactionreputation",
      "playerfactionspell",
      "response",
      "genestat",
      "playerfactiontitle",
      "responselocale",
      "choice",
      "playerxpforlevel",
      "playerrewarditem",
      "currency",
      "choicelocale",
      "faction",
      "player",
      "craft",
      "playercraft"
    ],
    protoPath: [
      "src/user/user.proto",
      "src/achievement/achievement.proto",
      "src/achievementreward/achievementreward.proto",
      "src/achievementrewardlocale/achievementrewardlocale.proto",
      "src/achievementbehaviour/achievementbehaviour.proto",
      "src/gameobjectquestitem/gameobjectquestitem.proto",
      "src/explorationbasexp/explorationbasexp.proto",
      "src/gameevent/gameevent.proto",
      "src/gameobjecttemplateaddon/gameobjecttemplateaddon.proto",
      "src/gameobjecttemplate/gameobjecttemplate.proto",
      "src/gameobjectaddon/gameobjectaddon.proto",
      "src/gameobject/gameobject.proto",
      "src/gameobjectqueststarter/gameobjectqueststarter.proto",
      "src/loottemplate/loottemplate.proto",
      "src/gameobjectquestender/gameobjectquestender.proto",
      "src/gameobjecttemplatelocale/gameobjecttemplatelocale.proto",
      "src/gameeventmodelequip/gameeventmodelequip.proto",
      "src/gameeventgameobject/gameeventgameobject.proto",
      "src/gameeventquest/gameeventquest.proto",
      "src/gameeventcharacter/gameeventcharacter.proto",
      "src/gameobjectoverrides/gameobjectoverrides.proto",
      "src/gameeventcondition/gameeventcondition.proto",
      "src/gameeventcreature/gameeventcreature.proto",
      "src/gameobjectloottemplate/gameobjectloottemplate.proto",
      "src/millingloottemplate/millingloottemplate.proto",
      "src/mailloottemplate/mailloottemplate.proto",
      "src/graveyardzone/graveyardzone.proto",
      "src/itemrandombonuslisttemplate/itemrandombonuslisttemplate.proto",
      "src/jumpchargeparams/jumpchargeparams.proto",
      "src/itemtemplateaddon/itemtemplateaddon.proto",
      "src/linkedrespawn/linkedrespawn.proto",
      "src/itembehaviour/itembehaviour.proto",
      "src/instancetemplate/instancetemplate.proto",
      "src/itemtemplate/itemtemplate.proto",
      "src/mountdefinitions/mountdefinitions.proto",
      "src/instancespawngroups/instancespawngroups.proto",
      "src/characterspell/characterspell.proto",
      "src/characterdialogue/characterdialogue.proto",
      "src/character/character.proto",
      "src/paragraphlocale/paragraphlocale.proto",
      "src/petnamegeneration/petnamegeneration.proto",
      "src/paragraph/paragraph.proto",
      "src/petlevelstats/petlevelstats.proto",
      "src/playerfactionachievement/playerfactionachievement.proto",
      "src/craftlevelstat/craftlevelstat.proto",
      "src/playerfactionquest/playerfactionquest.proto",
      "src/playerreward/playerreward.proto",
      "src/playerfactionreputation/playerfactionreputation.proto",
      "src/playerfactionspell/playerfactionspell.proto",
      "src/response/response.proto",
      "src/genestat/genestat.proto",
      "src/playerfactiontitle/playerfactiontitle.proto",
      "src/responselocale/responselocale.proto",
      "src/choice/choice.proto",
      "src/playerxpforlevel/playerxpforlevel.proto",
      "src/playerrewarditem/playerrewarditem.proto",
      "src/currency/currency.proto",
      "src/choicelocale/choicelocale.proto",
      "src/faction/faction.proto",
      "src/player/player.proto",
      "src/craft/craft.proto",
      "src/playercraft/playercraft.proto"
    ],
    url: configService.get<string>("GRPC_CLIENT_URL_PATH"),
  },
};
